# v4l2matlab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Webcam.m  WebcamMexWrapper.cpp  build_webcam_mex_interface.m  test_webcam_mex_interface.m
